# PhiSRHI

./: .gitignore  AI_Context_Continuity_Complete_Research.md  README.md  install.ps1  uninstall.ps1
.agents/: AGENT_BRANDING.md  AGENT_CEREBRAS_MASTER.md  AGENT_DOCS_EXAMPLES.md  AGENT_QA_TESTING.md  AGENT_RESEARCH_CONTINUE.md  AGENT_SONNET_LANGUAGES.md  README.md
.github/: FUNDING.yml
PhiSHRI/: HASH_TABLE.json  INDEX.json  SCHEMA_V1.1_CREDIBILITY.md  SEMANTIC_MAP.json
PhiSHRI/CONTEXTS/ARCHITECTURE/: R34EIP.json  R35ESB.json
PhiSHRI/CONTEXTS/ERRORS/: E14DISTRIBUTED_TRACE.json  E15CASCADING.json  E16DEADLOCK.json  E17LIVELOCK.json  E18RESOURCE_EXHAUSTION.json  E19PARTIAL_FAILURE.json  E20CLOCK_SKEW.json  E21POISON_PILL.json  E22SPLIT_BRAIN.json  E23DATA_CORRUPTION.json  E32WMCP_SENDKEYS_FAIL.json  E36VALIDATESET_IEX.json  E37WSL_APPDATA_BLOCK.json  E38JSON_CONFIG_MERGE.json  E39GIT_PUSH_403.json
PhiSHRI/CONTEXTS/LANGUAGES/: L01PYTHON.json  L02PYTHON_ASYNC.json  L03PYTHON_TYPING.json  L04PYTHON_TESTING.json  L05PYTHON_PACKAGING.json  L06PYTHON_PERF.json  L07PYTHON_DATA.json  L08PYTHON_WEB.json  L09PYTHON_CLI.json  L10PYTHON_SECURITY.json  L11NODEJS.json  L12TYPESCRIPT.json  L13TS_PATTERNS.json  L14REACT_PATTERNS.json  L15NEXTJS.json  L16NODE_TESTING.json  L17NPM_PACKAGES.json  (+33 more)
PhiSHRI/INDEXES/: HASH_TABLE.json
docs/: index.html  landing-page.html
gui/: .gitignore  README.md  package.json  vite.config.js
gui/src/: index.html  main.js  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
(+94 files in other folders)
