[package]
name = "phishri-installer"
version = "1.1.0"
description = "PhiSHRI MCP Installer GUI"
authors = ["Stryk91"]
license = "MIT"
repository = "https://github.com/Stryk91/PhiSHRI"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["process", "io-util"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
